test-data/error/max-accel-yaw-offset-single-yaw.hltas
version 1
frames
s51-j-----|------|------|0.001|- 10|-|1